Updated bib and citations

--- a/report/report.bib
+++ b/report/report.bib
@@ -3,43 +3,52 @@
     title     = "Path planning strategies for a point mobile automaton moving amidst unknown obstacles of arbitrary shape",
     year      = "1987",
     publisher = "Algorithmica"
-}
+},
 
 @book{Optimized_Path_Planning,
     author    = "Jur van den Berg, Pieter Abbeel, and Ken Goldberg",
     title     = "Optimized path planning for robots with motion uncertainty and imperfect state information",
     year      = "June 2011",
     publisher = "The International Journal of Robotics Research"
-}
+},
 
 @book{Grid­based_Path­finding,
     author    = "P. Yap",
     title     = "Grid­based path­finding",
     year      = "2002",
     publisher = "In Proceedings of the Canadian Conference on Artificial Intelligence"
-}
+},
 
 @book{Optimal_Line­sweep­based,
     author    = "W. H. Huang",
     title     = "Optimal line­sweep­based decompositions for coverage algorithms",
     year      = "2001",
     publisher = "in Proc. IEEE Int. Conf. Robotics and Automation"
-}
+},
 
 @misc{Simulation_for_Roomba,
     author    = "Anshul Sharma",
     title     = "Simulation for Roomba Vacuum Robot",
+    year      = "2012",
     url       = "https://github.com/raun/Roomba-Vacuum-Robot"
-}
+},
 
 @misc{Robotics_Studio,
     author    = "Microsoft Corp",
     title     = "MS Robotics Studio",
     url       = "http://www.microsoft.com/en­ca/download/details.aspx?id=29081"
-}
+},
 
 @misc{WeBots,
     author    = "CYBERBOTICS Ltd",
     title     = "WeBots",
     url       = "https://www.cyberbotics.com/overview"
+},
+
+@misc{HSW_Roomba,
+    author    = "Julia Layton",
+    title     = "How Robotic Vacuums Work",
+    year      = "2009",
+    url       = "http://electronics.howstuffworks.com/gadgets/home/robotic-vacuum2.htm",
+    publisher = "HowStuffWorks"
 }
